FindBugs fix.